
@startuml
entity Usuario {
  + id
  + nome
  + email
  + senha
  + tipo
  + cliente_id
  + loja_id
  + ativo
  + criado_em
}

entity Cliente {
  + id
  + nome
}

entity Loja {
  + id
  + nome
  + cliente_id
}

entity Formulario {
  + id
  + nome
  + cliente_id
  + loja_id
  + criado_em
}

entity Pergunta {
  + id
  + texto
  + tipo_resposta
  + obrigatoria
  + formulario_id
}

entity OpcaoPergunta {
  + id
  + texto
  + pergunta_id
}

entity Auditoria {
  + id
  + data
  + loja_id
  + usuario_id
  + formulario_id
}

entity Grupo {
  + id
  + nome
  + cliente_id
}

entity Avaliado {
  + id
  + nome
  + email
  + endereco
  + idioma
  + cliente_id
  + grupo_id
}

entity CampoPersonalizado {
  + id
  + nome
  + tipo
  + obrigatorio
  + visivel
  + pre_configurado
  + cliente_id
}

entity CampoPersonalizadoValor {
  + id
  + campo_id
  + avaliado_id
  + valor
}

Usuario --> Cliente
Usuario --> Loja
Loja --> Cliente
Formulario --> Cliente
Formulario --> Loja
Pergunta --> Formulario
OpcaoPergunta --> Pergunta
Auditoria --> Loja
Auditoria --> Usuario
Auditoria --> Formulario
Grupo --> Cliente
Avaliado --> Cliente
Avaliado --> Grupo
CampoPersonalizado --> Cliente
CampoPersonalizadoValor --> CampoPersonalizado
CampoPersonalizadoValor --> Avaliado
@enduml
